# llmusecase

./: .gitignore  .pre-commit-config.yaml  00_TabularData_Preparation.ipynb  02_Features_Showcase.ipynb  README.md  prepare_data.py  pyproject.toml  streamlit_app.py
core/: README.md
core/llmbackend/: README.md  embedder_backend.py  llm_backend.py
core/llmbackend/prompts/: README.md  dataeng_prompt.py  dataeng_tools.json  dataviz_prompt.py  dataviz_tools.json  forecast_prompt.py  rag_prompt.py  routing_prompts.py
core/readers/: README.md  __init__.py  db_schema.py  pdf_readers.py  rag_schema.py  xlsx_readers.py
core/services/: README.md  dataviz_service.py  db_query_service.py  forecast_service.py  pipelines.py  rag_service.py  router_service.py
core/settings/: README.md  public.env  secrets_example.env  settings.py
core/utils/: README.md  __init__.py  notebook_supporting_functions.py
data/: pnl.xlsx  test_queries.py
env/: Dockerfile  requirements.txt  requirements_dev.txt
tests/: README.md  test_settings.py
